<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addMember"
    tools:context=".view.AddMemberActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/enterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="28sp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/enterText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/nameLayout">
    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_weight="1"
        android:textSize="24sp"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameEdit"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_weight="2"
        android:autofillHints="Enter Name"
        android:background="@drawable/rectangle"
        tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/nameLayout"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="24sp"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:id="@+id/ageEdit"
            android:inputType="number"
            android:background="@drawable/rectangle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/genderLayout"
        android:layout_below="@id/ageLayout"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/genderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="24sp"
        android:layout_weight="1"
        />
    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:checkedButton="@+id/maleButton"
        >
        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/female"/>
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderLayout"
        android:orientation="horizontal"
        android:id="@+id/emailLayout"
        android:layout_margin="10dp"
        >
    <TextView
        android:id="@+id/emailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24sp"
        android:layout_weight="1"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailEdit"
        android:textSize="24sp"
        android:layout_weight="2"
        android:inputType="textEmailAddress"
        android:autofillHints="Enter email"
        android:background="@drawable/rectangle"
        tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLayout"
        android:orientation="horizontal"
        android:id="@+id/phoneLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <TextView
            android:id="@+id/phoneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"
            android:textSize="24sp"
            android:layout_weight="1"
         />
        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints=""
            android:background="@drawable/rectangle"
            android:inputType="phone"
            android:textSize="24sp"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/phoneLayout"
        android:id="@+id/submitButton"/>
</RelativeLayout>
</ScrollView>
