<resources>
    <string name="app_name">GroupApp</string>
    <string name="app_title">The Group App</string>
    <string name="welcome">Welcome!</string>
    <string name="add_group">Add a new group</string>
    <string name="add">Add a new member</string>
    <string name="show_groups">Existing groups</string>
    <string name="show">Existing members</string>
    <string name="enter">New Member Registration</string>
    <string name="enter_group">New Group Registration</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phoneNo">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete Member</string>
    <string name="update">Update</string>
    <string name="no_groups_exist">No groups exist!</string>
    <string name="no_members_exist">No members exist!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>
